# vfx-launcher

./: .gitignore  README.md  package-lock.json
client/: package-lock.json  package.json
vfx-launcher/: delete-test.html  package-lock.json  package.json  test-command.html  test-tauri.html  tsconfig.json  vite.config.ts
vfx-launcher/src/: App.tsx  index.css  shims-tauri.d.ts  test-delete.html
vfx-launcher/src-tauri/: Cargo.toml  config.toml  project_templates.yaml  tauri.conf.json
vfx-launcher/src-tauri/src/: auth.rs  config.rs  db.rs  dialog.rs  files.rs  files_new.rs  lib.rs  logger.rs  main.rs  paths.rs  templates.rs  test_scan.rs  watcher.rs
vfx-launcher/src/components/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  EmergencyDelete.tsx  Layout.tsx  ProjectCard.tsx
vfx-launcher/src/components/projects/: FileEntry.tsx  FileSection.tsx  FolderGroup.tsx  ProjectControls.tsx  ProjectFiles.tsx  ProjectsList.tsx  ShotGroup.tsx
vfx-launcher/src/context/: AuthContext.tsx
vfx-launcher/src/pages/: ActivityPage.tsx  AddProjectPage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  ProjectDetailPage.tsx.new  ProjectsPage.tsx  SettingsPage.tsx  UserManagementPage.tsx
vfx-launcher/src/types/: activity.ts  project.ts  projectFile.ts  projectTemplate.ts  settings.ts
